--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body::before {
 }
 /* ---------- Alumni messages --------- */
 .team-member {
-  background-color: #11245A;
+  background-color: #c4935b;
 }
 
 .team-member .hline {
@@ -89,7 +89,7 @@ body::before {
    transition: all 0.4s ease;
 }
 .team-member.even {
-  background-color: #162e6e;
+  background-color: #c4935b;
 }
 
 /* ---------- Testimonail reviews --------- */
